<resources>
    <string name="app_name">Food Your Way</string>
    <string name="action_donate">Buy </string>
    <string name="action_basket">Basket</string>
    <string name="donateTitle">VegBurg</string>
    <string name="donateSubtitle">description of item</string>
    <string name="donateButton">Add to basket</string>
    <string name="paypal">DairyFree</string>
    <string name="direct">GlutenFree</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="basketTitle">deliveries Basket</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food Your Way APP</string>
    <string name="nav_header_subtitle">Your Delivery app for Healthy food</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_donate">Buy</string>
    <string name="menu_basket">Basket</string>
    <string name="menu_favourites">Menu</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
